chore: setting modified

--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "postinstall": "husky install"
   },
   "lint-staged": {
-    "src/**/*.{jsx,js}": [
+    "src/**/*.{tsx,ts,json}": [
       "prettier --write --cache",
       "eslint --fix"
     ]
   },
   "dependencies": {
-    "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
@@ -37,10 +36,11 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.2",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5"
   },
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
-  "main": ".eslintrc.js",
+  "main": ".eslintrc",
   "keywords": [],
   "author": "",
   "license": "ISC"
